test_scores/negative_dimers/features/P06753.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P06753.pkl.xz